# hidockers

./: README.md
ai/ollama/: docker-compose.yml
ai/rovodevcli/: Dockerfile  docker-compose.yml
alertmanager/: README.md  docker-compose.yml
alertmanager/config/: alertmanager.yml
alertmanager/msteams/: prom2teams.yml  prometheus-msteams.yml
ansible/: Dockerfile  README.md  docker-compose.yml
ansible/hooks/: post_push
cassandra/: Dockerfile  README.md
cortex/: .env  README.md  docker-compose-single.yml  docker-compose.yml
cortex/config/: cortex-config.yml  cortex-tenant.yml
cortex/prometheus/: docker-compose.yml  prom-config-1.yml  prom-config-2.yml
database/cloudbeaver/: .env  README.md  configs.yaml  docker-compose.yaml
database/dynamodb/: Dockerfile
database/mongodb/: README.md
database/pgadmin/: .env  README.md  docker-compose.yaml
database/postgres/: .env  (+2 more)
dynamodb/: Dockerfile  README.md  start_dynamodb.sh
gcc/: Dockerfile  README.md
gitlab/: .env  README.md  docker-compose.yaml  docker-compose.yml
grafana/: README.md  docker-compose.yml
jdk/: Dockerfile  README.md
jenkins/: Dockerfile  README.md  docker-compose.yml
loki/: .env  README.md  docker-compose-readwrite.yml  docker-compose-single.yml  docker-compose.yml
misc/dpdk/examples/app/helloworld/: main.c  meson.build
misc/dpdk/examples/kernel/igb_uio/: meson.build  meson_options.txt
mongodb/: Dockerfile  README.md
mosquitto/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mosquitto.conf
nginx/: README.md  docker-compose.yml  nginx.conf
rundeck/: .env  README.md  docker-compose.yml
stacks/: docker-compose.yml  docker-stack.yml
(+140 files in other folders)
